--- a/site.yml
+++ b/site.yml
@@ -1,102 +1,19 @@
-# - hosts: gre1
-#   gather_facts: true
-#   roles:
-#     - role: gre
-#     - role: bird
-# - hosts: gre2
-#   gather_facts: true
-#   roles:
-#     - role: gre
-#     - role: bird
-# - hosts: gre3
-#   gather_facts: true
-#   roles:
-#     - role: gre
-#     - role: bird
-# - hosts: vxlan1
-#   gather_facts: true
-#   roles:
-#     - role: vxlan
-#     - role: bird
-# - hosts: vxlan2
-#   gather_facts: true
-#   roles:
-#     - role: vxlan
-#     - role: bird
-# - hosts: vxlan3
-#   gather_facts: true
-#   roles:
-#     - role: vxlan
-#     - role: bird
-# - hosts: wireguard1
-#   gather_facts: true
-#   roles:
-#     - role: wireguard
-# - hosts: wireguard2
-#   gather_facts: true
-#   roles:
-#     - role: wireguard
-# - hosts: wireguard3
-#   gather_facts: true
-#   roles:
-#     - role: wireguard
-
-# - hosts: localhost
-#   gather_facts: true
-#   roles:
-#     - role: calico
-
-# - hosts: vxlan1
-#   gather_facts: true
-#   roles:
-#     - role: vxlan
-# - role: ecmp
-# - role: bird
-# - hosts: clients
-#   gather_facts: true
-#   roles:
-#     - role: bird
-
-# - hosts: vxlan2
-#   gather_facts: true
-#   roles:
-#     - role: vxlan
-
-# - hosts: machine1
-#   gather_facts: true
-#   become: yes
-#   roles:
-#     - role: metrics
-
-# - hosts: machine2
-#   gather_facts: true
-#   become: yes
-#   roles:
-#     - role: metrics
-
-# - hosts: engine1
-#   gather_facts: true
-#   become: yes
-#   roles:
-#     - role: metrics
-
 - hosts: vxlan1
   gather_facts: true
   become: yes
   roles:
-    # - role: vxlan
+    - role: vxlan
     - role: metrics
 
 - hosts: vxlan2
   gather_facts: true
   become: yes
   roles:
-    # - role: vxlan
+    - role: vxlan
     - role: metrics
-
-# Dynamic route monitoring for clients
-- hosts: clients
-  gather_facts: true
-  become: yes
-  roles:
-    - role: dynamic-route
+# # Dynamic route monitoring for clients
+# - hosts: clients
+#   gather_facts: true
+#   become: yes
+#   roles:
+#     - role: dynamic-route
