--- a/site.yml
+++ b/site.yml
@@ -1,19 +1,17 @@
-- hosts: vxlan1
+- hosts: vxlan_all
   gather_facts: true
   become: yes
   roles:
     - role: vxlan
-    - role: metrics
+    - role: bird
 
-- hosts: vxlan2
+- hosts: localhost
+  gather_facts: true
+  roles:
+    - role: calico
+
+- hosts: kube_workers
   gather_facts: true
   become: yes
   roles:
-    - role: vxlan
-    - role: metrics
-# # Dynamic route monitoring for clients
-# - hosts: clients
-#   gather_facts: true
-#   become: yes
-#   roles:
-#     - role: dynamic-route
+    - role: workers-ecmp
