--- a/roles/vxlan/tasks/vxlan.yaml
+++ b/roles/vxlan/tasks/vxlan.yaml
@@ -4,13 +4,6 @@
     name: iproute2
     state: present
 
-- name: Ensure iptables-persistent is installed
-  become: true
-  apt:
-    name: iptables-persistent
-    state: present
-  when: ansible_os_family == "Debian"
-
 - name: Enable and persist IP forwarding (net.ipv4.ip_forward=1)
   become: true
   sysctl:
@@ -74,27 +67,6 @@
     remote_tunnel_ip: "{{ vxlan_ip_range }}.{{ (groups['all'] | list).index(peer_host) + 1 }}"
   when: tunnel_type == "src" and physical_interfaces is defined
 
-# - name: Setup VXLAN config for eth1 (machine to engine)
-#   become: true
-#   become_user: root
-#   template:
-#     src: 90-vxlan.yaml.j2
-#     dest: /etc/netplan/90-vxlan-eth1.yaml
-#     mode: "0400"
-#   vars:
-#     remote_ip: "{{ hostvars[peer_host]['public_ip'] }}"
-#     index: "{{ (groups['all'] | list).index(inventory_hostname) + 1 }}"
-#     tunnel_address: "{{ vxlan_ip_range }}.{{ index + 100 }}/{{ vxlan_cidr }}"
-#     vxlan_id: 201
-#     vxlan_port: 4790
-#     local_ip: "{{ physical_interfaces[1].ip.split('/')[0] }}"
-#     interface_name: "eth1"
-#     vxlan_interface_name: "vxlan-eth1"
-#     interface_index: 1
-#     remote_network_range: "{{ interface_base_ranges['eth1'][tunnel_type == 'src' and 'engine_range' or 'machine_range'] }}"
-#     remote_tunnel_ip: "{{ vxlan_ip_range }}.{{ (groups['all'] | list).index(peer_host) + 1 + 100 }}"
-#   when: tunnel_type == "src" and physical_interfaces is defined and physical_interfaces|length > 1
-
 - name: Calculate peer network from peer physical interface (engine side)
   set_fact:
     peer_interface_ip: "{{ hostvars[peer_host]['physical_interfaces'][0].ip }}"
@@ -131,27 +103,6 @@
     remote_tunnel_ip: "{{ vxlan_ip_range }}.{{ (groups['all'] | list).index(peer_host) + 1 }}"
   when: tunnel_type == "dest" and physical_interfaces is defined
 
-# - name: Setup VXLAN config for engine (engine to machine eth1)
-#   become: true
-#   become_user: root
-#   template:
-#     src: 90-vxlan.yaml.j2
-#     dest: /etc/netplan/90-vxlan-eth1.yaml
-#     mode: "0400"
-#   vars:
-#     remote_ip: "{{ vxlan_remote_ips.eth1 | default(hostvars[peer_host]['public_ip']) }}"
-#     index: "{{ (groups['all'] | list).index(inventory_hostname) + 1 }}"
-#     tunnel_address: "{{ vxlan_ip_range }}.{{ index + 100 }}/{{ vxlan_cidr }}"
-#     vxlan_id: 201
-#     vxlan_port: 4790
-#     local_ip: "{{ physical_interfaces[0].ip.split('/')[0] }}"
-#     interface_name: "ens3"
-#     vxlan_interface_name: "vxlan-eth1"
-#     interface_index: 1
-#     remote_network_range: "{{ interface_base_ranges['eth1'][tunnel_type == 'src' and 'engine_range' or 'machine_range'] }}"
-#     remote_tunnel_ip: "{{ vxlan_ip_range }}.{{ (groups['all'] | list).index(peer_host) + 1 + 100 }}"
-#   when: tunnel_type == "dest" and physical_interfaces is defined
-
 - name: Start VXLAN
   become: true
   command: netplan apply
@@ -173,21 +124,39 @@
   register: interface_ips
   when: tunnel_type == "dest"
 
-- name: Set fact if any IP is in 10.0.0.0/16
+- name: Set fact if any IP is in 10.0.0.0/24
   set_fact:
-    is_10_0_range: "{{ interface_ips.stdout_lines | select('search', '\\s10\\.0\\.') | list | length > 0 }}"
+    is_10_0_range: "{{ interface_ips.stdout_lines | select('search', '\\s10\\.0\\.0\\.') | list | length > 0 }}"
   when: tunnel_type == "dest"
+
+- name: Get all interface IPs for machines
+  become: true
+  command: ip -4 -o addr show
+  register: interface_ips_machine
+  when: tunnel_type == "src"
+
+- name: Set fact if any IP is in 10.0.0.0/16 for machines
+  set_fact:
+    is_10_0_range: "{{ interface_ips_machine.stdout_lines | select('search', '\\s10\\.0\\.') | list | length > 0 }}"
+  when: tunnel_type == "src"
+
+- name: Ensure iptables-persistent is installed
+  become: true
+  apt:
+    name: iptables-persistent
+    state: present
+  when: ansible_os_family == "Debian" and is_10_0_range | default(false)
 
 - name: Get default route interface for machines
   become: true
   command: ip route show default
   register: default_route_machine
-  when: tunnel_type == "src"
+  when: tunnel_type == "src" and is_10_0_range | default(false)
 
 - name: Extract main interface from default route for machines
   set_fact:
     main_interface_machine: "{{ default_route_machine.stdout.split(' ')[4] }}"
-  when: tunnel_type == "src"
+  when: tunnel_type == "src" and is_10_0_range | default(false)
 
 - name: Ensure MASQUERADE rule exists on main interface for machines
   become: true
@@ -197,7 +166,7 @@
     out_interface: "{{ main_interface_machine }}"
     jump: MASQUERADE
     state: present
-  when: tunnel_type == "src"
+  when: tunnel_type == "src" and is_10_0_range | default(false)
 
 - name: Ensure MASQUERADE rule exists on main interface for engines
   become: true
@@ -207,11 +176,10 @@
     out_interface: "{{ main_interface }}"
     jump: MASQUERADE
     state: present
-  when: tunnel_type == "dest"
+  when: tunnel_type == "dest" and is_10_0_range | default(false)
 
 - name: Save iptables rules
   become: true
   command: netfilter-persistent save
-  when: ansible_os_family == "Debian"
+  when: ansible_os_family == "Debian" and is_10_0_range | default(false)
   changed_when: false
-# ECMP is now deployed at site level for all hosts
