--- a/roles/bird/tasks/facts.yaml
+++ b/roles/bird/tasks/facts.yaml
@@ -9,15 +9,18 @@
         | map(attribute='key')
         | first) | default('vxlan1')
       }}
+    is_client: "{{ tunnel_type == 'client' }}"
+    local_subnet: "{{ ansible_default_ipv4.network + '/' + (ansible_default_ipv4.prefix | string) }}"
+    interface: "{{ ansible_default_ipv4.interface }}"
+
+- name: Determine tunnel type name
+  set_fact:
     tunnel_type_name: >-
       {{
         tunnel_group
         | regex_replace('^(gre|wireguard|vxlan)([0-9]+)?.*', '\\1')
         | default('gre')
       }}
-    is_client: "{{ tunnel_type == 'client' }}"
-    local_subnet: "{{ ansible_default_ipv4.network + '/' + (ansible_default_ipv4.prefix | string) }}"
-    interface: "{{ ansible_default_ipv4.interface }}"
 
 - name: Determine tunnel interface name
   set_fact:
