--- a/roles/workers-ecmp/tasks/main.yml
+++ b/roles/workers-ecmp/tasks/main.yml
@@ -17,5 +17,20 @@
     reload: true
     sysctl_file: /etc/sysctl.conf
 
+- name: Disable strict reverse path filtering to allow asymmetric routes (net.ipv4.conf.all.rp_filter=0)
+  become: true
+  ansible.builtin.sysctl:
+    name: net.ipv4.conf.all.rp_filter
+    value: "0"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
 
-
+- name: Disable strict reverse path filtering for default interface (net.ipv4.conf.default.rp_filter=0)
+  become: true
+  ansible.builtin.sysctl:
+    name: net.ipv4.conf.default.rp_filter
+    value: "0"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
