--- a/roles/vxlan/tasks/vxlan.yaml
+++ b/roles/vxlan/tasks/vxlan.yaml
@@ -31,6 +31,221 @@
     reload: true
     sysctl_file: /etc/sysctl.conf
 
+- name: Get physical interface name for sysctls
+  set_fact:
+    vxlan_physical_interface: "{{ physical_interfaces[0].name }}"
+    vxlan_interface: "vxlan-{{ physical_interfaces[0].name }}"
+  when: physical_interfaces is defined and physical_interfaces | length > 0
+
+- name: Disable rp_filter for all interfaces
+  become: true
+  sysctl:
+    name: net.ipv4.conf.all.rp_filter
+    value: "0"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
+- name: Disable rp_filter for default interface
+  become: true
+  sysctl:
+    name: net.ipv4.conf.default.rp_filter
+    value: "0"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
+- name: Disable rp_filter for physical interface
+  become: true
+  sysctl:
+    name: "net.ipv4.conf.{{ vxlan_physical_interface }}.rp_filter"
+    value: "0"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+  when: vxlan_physical_interface is defined
+
+- name: Disable rp_filter for VXLAN interface
+  become: true
+  sysctl:
+    name: "net.ipv4.conf.{{ vxlan_interface }}.rp_filter"
+    value: "0"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+  when: vxlan_interface is defined
+
+- name: Set netfilter conntrack max
+  become: true
+  sysctl:
+    name: net.netfilter.nf_conntrack_max
+    value: "1048576"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
+- name: Set netfilter conntrack TCP timeout established
+  become: true
+  sysctl:
+    name: net.netfilter.nf_conntrack_tcp_timeout_established
+    value: "7200"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
+- name: Set netfilter conntrack TCP timeout time wait
+  become: true
+  sysctl:
+    name: net.netfilter.nf_conntrack_tcp_timeout_time_wait
+    value: "30"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
+- name: Set netfilter conntrack TCP timeout close wait
+  become: true
+  sysctl:
+    name: net.netfilter.nf_conntrack_tcp_timeout_close_wait
+    value: "60"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
+- name: Set netfilter conntrack TCP timeout fin wait
+  become: true
+  sysctl:
+    name: net.netfilter.nf_conntrack_tcp_timeout_fin_wait
+    value: "30"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
+- name: Set netfilter conntrack TCP timeout syn recv
+  become: true
+  sysctl:
+    name: net.netfilter.nf_conntrack_tcp_timeout_syn_recv
+    value: "30"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
+- name: Set netfilter conntrack generic timeout
+  become: true
+  sysctl:
+    name: net.netfilter.nf_conntrack_generic_timeout
+    value: "120"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
+- name: Set IP local port range
+  become: true
+  sysctl:
+    name: net.ipv4.ip_local_port_range
+    value: "1024 65535"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
+- name: Enable TCP time wait reuse
+  become: true
+  sysctl:
+    name: net.ipv4.tcp_tw_reuse
+    value: "1"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
+- name: Set core receive memory max
+  become: true
+  sysctl:
+    name: net.core.rmem_max
+    value: "16777216"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
+- name: Set core write memory max
+  become: true
+  sysctl:
+    name: net.core.wmem_max
+    value: "16777216"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
+- name: Set core receive memory default
+  become: true
+  sysctl:
+    name: net.core.rmem_default
+    value: "262144"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
+- name: Set core write memory default
+  become: true
+  sysctl:
+    name: net.core.wmem_default
+    value: "262144"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
+- name: Set TCP receive memory
+  become: true
+  sysctl:
+    name: net.ipv4.tcp_rmem
+    value: "4096 131072 16777216"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
+- name: Set TCP write memory
+  become: true
+  sysctl:
+    name: net.ipv4.tcp_wmem
+    value: "4096 131072 16777216"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
+- name: Set TCP memory
+  become: true
+  sysctl:
+    name: net.ipv4.tcp_mem
+    value: "1048576 1572864 2097152"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
+- name: Set core netdev max backlog
+  become: true
+  sysctl:
+    name: net.core.netdev_max_backlog
+    value: "250000"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
+- name: Set core somaxconn
+  become: true
+  sysctl:
+    name: net.core.somaxconn
+    value: "65535"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
+- name: Set TCP max syn backlog
+  become: true
+  sysctl:
+    name: net.ipv4.tcp_max_syn_backlog
+    value: "65535"
+    state: present
+    reload: true
+    sysctl_file: /etc/sysctl.conf
+
 - name: Calculate peer network from peer physical interface
   set_fact:
     peer_interface_ip: "{{ hostvars[peer_host]['physical_interfaces'][0].ip }}"
